--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codingame/monaco-vscode-standalone-languages": "~18.1.3",
     "@monaco-editor/react": "^4.7.0",
-    "monaco-editor": "^0.52.2",
     "monaco-editor-wrapper": "^6.9.0",
     "monaco-languageclient": "^9.8.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "vite-plugin-monaco-editor-esm": "^2.0.2"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -31,5 +30,7 @@
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "overrides": {
+    "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@~18.1.3"
+  }
 }
