--- a/package.json
+++ b/package.json
@@ -5,32 +5,34 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "watch:tsc": "tsc -b -w",
+    "build:tsc": "tsc -b",
+    "build": "npm run build:tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@codingame/monaco-vscode-standalone-languages": "~18.1.3",
+    "@codingame/monaco-vscode-standalone-languages": "^21.3.0",
     "@monaco-editor/react": "^4.7.0",
-    "monaco-editor-wrapper": "^6.9.0",
-    "monaco-languageclient": "^9.8.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "monaco-languageclient": "^10.0.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "vscode": "npm:@codingame/monaco-vscode-extension-api@^21.3.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
-    "eslint": "^9.30.1",
+    "@eslint/js": "^9.36.0",
+    "@types/react": "^19.1.15",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.4",
+    "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4"
+    "eslint-plugin-react-refresh": "^0.4.22",
+    "globals": "^16.4.0",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.44.1",
+    "vite": "^7.1.7"
   },
   "overrides": {
-    "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@~18.1.3"
+    "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@^21.3.0"
   }
 }
